feat(backend): added support for multiple calendars
