# backend/api.yaml
@@ -1,8 +1,36 @@
 openapi: "3.0.0"
 info:
   version: 1.0.0
-  title:
+  title: TODO
 paths:
+  /getCalendars:
+    get:
+      summary: TODO
+      responses:
+        "200":
+          description: TODO
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Calendar"
+  /addCalendar:
+    post:
+      summary: TODO
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CalendarNoId"
+      responses:
+        "201":
+          description: TODO
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Calendar"
   /allEvents:
     get:
       summary: TODO - delete endpoint later
@@ -23,7 +51,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/EventNoId"
+              $ref: "#/components/schemas/AddEvent"
       responses:
         "201":
           description: TODO
@@ -62,11 +90,36 @@ paths:
                   $ref: "#/components/schemas/Event"
 components:
   schemas:
+    Calendar:
+      type: object
+      required:
+        - id
+        - name
+      properties:
+        id:
+          type: string
+          format: uuid
+          x-go-type: uuid.UUID
+          x-go-type-import:
+            path: github.com/google/uuid
+          example: "019b7abf-0d2a-7240-bc33-68fc0a8a1118"
+        name:
+          type: string
+          example: "calendar 1"
+    CalendarNoId:
+      type: object
+      required:
+        - name
+      properties:
+        name:
+          type: string
+          example: "calendar 1"
     Event:
       type: object
       required:
         - id
         - name
+        - calendar_id
         - start_time
         - end_time
       properties:
@@ -80,6 +133,13 @@ components:
         name:
           type: string
           example: "event 1"
+        calendar_id:
+          type: string
+          format: uuid
+          x-go-type: uuid.UUID
+          x-go-type-import:
+            path: github.com/google/uuid
+          example: "019b7abf-0d2a-7240-bc33-68fc0a8a1118"
         start_time:
           type: string
           format: date-time
@@ -88,16 +148,24 @@ components:
           type: string
           format: date-time
           example: 2022-01-02T16:00:00+07:00
-    EventNoId:
+    AddEvent:
       type: object
       required:
         - name
+        - calendar_id
         - start_time
         - end_time
       properties:
         name:
           type: string
           example: "event 1"
+        calendar_id:
+          type: string
+          format: uuid
+          x-go-type: uuid.UUID
+          x-go-type-import:
+            path: github.com/google/uuid
+          example: "019b7abf-0d2a-7240-bc33-68fc0a8a1118"
         start_time:
           type: string
           format: date-time
